--- a/oopsassignments/oops_assignment_3/oopsassign3prob2/oopsassign3prob2/oopsassign3prob2.vcxproj
+++ b/oopsassignments/oops_assignment_3/oopsassign3prob2/oopsassign3prob2/oopsassign3prob2.vcxproj
@@ -115,6 +115,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="complex.cpp" />
     <ClCompile Include="genericStack.cpp" />
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
