--- a/oopsassignments/oops_assignment_3/oopsassign3prob2/oopsassign3prob2/oopsassign3prob2.vcxproj.filters
+++ b/oopsassignments/oops_assignment_3/oopsassign3prob2/oopsassign3prob2/oopsassign3prob2.vcxproj.filters
@@ -21,5 +21,8 @@
     <ClCompile Include="genericStack.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="complex.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
